--- a/style.css
+++ b/style.css
@@ -3,3 +3,35 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+  text-align: center;
+}
+figure {
+  text-align: center;
+}
+nav {
+  text-align: center;
+}
+nav a {
+  padding: 10px;
+  background-color: blanchedalmond;
+}
+figcaption {
+  font-size: smaller;
+  text-align: center;
+}
+p {
+  text-align: center;
+}
+section#featured-property p {
+  width: 800px;
+  text-align: center;
+  margin: auto;
+  margin-bottom: 1cm;
+}
+div {
+  float: left;
+  background-color: blanchedalmond;
+  text-align: center;
+  width: 25%;
+}
